  to match how the backend works (Timothy Potter)

* SOLR-15828: AuthTool (in SolrCLI) should include the config-read, collection-admin-read, core-admin-read, and all permissions in the initial security.json
  to avoid warnings in the security UI (Timothy Potter)

==================  8.11.0 ==================

Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.

New Features
---------------------

* SOLR-7642: opt-in support to create ZK chroot on startup (Timothy Potter, Shawn Heisey, Mark Miller, Tomas Eduardo Fernandez Lobbe,
  Jan Høydahl, Steve Molloy, Isabelle Giguere, David Eric Pugh, Gus Heck, Christine Poerschke, Houston Putman)

* SOLR-15708: SolrJ support for ConfigSet uploading (ab, hossman)

* SOLR-12666: Add authn & authz plugins that supports multiple authentication schemes, such as Bearer and Basic (Timothy Potter, janhoy)

* SOLR-15721: Support editing Basic auth config from the security UI when using the MultiAuthPlugin (Timothy Potter)

Improvements
---------------------

* SOLR-15707: Add the ability to set the AWS Profile per S3Repository (Houston Putman)

Optimizations
---------------------
(No changes)


Bug Fixes
---------------------
* SOLR-15626: The "config-read" permission has been fixed to properly allow access to `/solr/admin/configs?action=LIST` (Jon Senchyna via Eric Pugh)

* SOLR-15691: Admin UI raises yellow warning even when only case of hostnames differ (janhoy)

* SOLR-15702: Fix S3Repository to follow BackupRepository.createDirectory() API contract (Houston Putman)

* SOLR-15696: Incremental backups no longer fail on collections where a 'SPLITSHARD' operation previously occurred. (Jason Gerlowski)

* SOLR-15628: The SolrException.log() helper method has been fixed to correctly passes the Throwable to the Logger w/o stringification (hossman)

* SOLR-15722: Delete Replica does not delete the Per replica state (noble)
