@@ -299,8 +299,14 @@ public class SolrCLI {
 
     SSLConfigurationsFactory.current().init();
 
-    Tool tool = findTool(args);
-    CommandLine cli = parseCmdLine(args, tool.getOptions());
+    Tool tool = null;
+    try {
+      tool = findTool(args);
+    } catch (IllegalArgumentException iae) {
+      CLIO.err(iae.getMessage());
+      System.exit(1);
+    }
+    CommandLine cli = parseCmdLine(tool.getName(), args, tool.getOptions());
     System.exit(tool.runTool(cli));
   }
 
@@ -309,7 +315,15 @@ public class SolrCLI {
     return newTool(toolType);
   }
 
+  /**
+   * @deprecated Use the method that takes a tool name as the first argument instead.
+   */
+  @Deprecated
   public static CommandLine parseCmdLine(String[] args, Option[] toolOptions) throws Exception {
+    return parseCmdLine(SolrCLI.class.getName(), args, toolOptions);
+  }
+
+  public static CommandLine parseCmdLine(String toolName, String[] args, Option[] toolOptions) throws Exception {
     // the parser doesn't like -D props
     List<String> toolArgList = new ArrayList<String>();
     List<String> dashDList = new ArrayList<String>();
@@ -325,7 +339,7 @@ public class SolrCLI {
 
     // process command-line args to configure this application
     CommandLine cli =
-        processCommandLineArgs(joinCommonAndToolOptions(toolOptions), toolArgs);
+        processCommandLineArgs(toolName, joinCommonAndToolOptions(toolOptions), toolArgs);
 
     List<String> argList = cli.getArgList();
     argList.addAll(dashDList);
@@ -429,7 +443,7 @@ public class SolrCLI {
         return tool;
     }
 
-    throw new IllegalArgumentException(toolType + " not supported!");
+    throw new IllegalArgumentException(toolType + " is not a valid command!");
   }
 
   private static void displayToolOptions() throws Exception {
@@ -488,11 +502,18 @@ public class SolrCLI {
     return options.toArray(new Option[0]);
   }
 
+  /**
+   * @deprecated Use the method that takes a tool name as the first argument instead.
+   */
+  @Deprecated
+  public static CommandLine processCommandLineArgs(Option[] customOptions, String[] args) {
+    return processCommandLineArgs(SolrCLI.class.getName(), customOptions, args);
+  }
 
   /**
    * Parses the command-line arguments passed by the user.
    */
-  public static CommandLine processCommandLineArgs(Option[] customOptions, String[] args) {
+  public static CommandLine processCommandLineArgs(String toolName, Option[] customOptions, String[] args) {
     Options options = new Options();
 
     options.addOption("help", false, "Print this message");
@@ -521,13 +542,13 @@ public class SolrCLI {
             + exp.getMessage());
       }
       HelpFormatter formatter = new HelpFormatter();
-      formatter.printHelp(SolrCLI.class.getName(), options);
+      formatter.printHelp(toolName, options);
       exit(1);
     }
 
     if (cli.hasOption("help")) {
       HelpFormatter formatter = new HelpFormatter();
-      formatter.printHelp(SolrCLI.class.getName(), options);
+      formatter.printHelp(toolName, options);
       exit(0);
     }
 
@@ -1394,7 +1415,7 @@ public class SolrCLI {
           Option.builder("get")
               .argName("URL")
               .hasArg()
-              .required(false)
+              .required(true)
               .desc("Send a GET request to a Solr API endpoint.")
               .build()
       };
@@ -3235,7 +3256,7 @@ public class SolrCLI {
         };
         CreateTool createTool = new CreateTool(stdout);
         int createCode =
-            createTool.runTool(processCommandLineArgs(joinCommonAndToolOptions(createTool.getOptions()), createArgs));
+            createTool.runTool(processCommandLineArgs(createTool.getName(), joinCommonAndToolOptions(createTool.getOptions()), createArgs));
         if (createCode != 0)
           throw new Exception("Failed to create "+collectionName+" using command: "+ Arrays.asList(createArgs));
       }
@@ -3373,7 +3394,7 @@ public class SolrCLI {
 
       // let's not fail if we get this far ... just report error and finish up
       try {
-        configTool.runTool(processCommandLineArgs(joinCommonAndToolOptions(configTool.getOptions()), configArgs));
+        configTool.runTool(processCommandLineArgs(configTool.getName(), joinCommonAndToolOptions(configTool.getOptions()), configArgs));
       } catch (Exception exc) {
         System.err.println("Failed to update '"+propName+"' property due to: "+exc);
       }
@@ -3631,7 +3652,7 @@ public class SolrCLI {
       CreateCollectionTool createCollectionTool = new CreateCollectionTool(stdout);
       int createCode =
           createCollectionTool.runTool(
-              processCommandLineArgs(joinCommonAndToolOptions(createCollectionTool.getOptions()), createArgs));
+              processCommandLineArgs(createCollectionTool.getName(), joinCommonAndToolOptions(createCollectionTool.getOptions()), createArgs));
 
       if (createCode != 0)
         throw new Exception("Failed to create collection using command: "+ Arrays.asList(createArgs));
